[gd_scene load_steps=5 format=3 uid="uid://m6rsa8n8lm0g"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_bxkjo"]
[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="1_lf63n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2f1i"]
bg_color = Color(0.658824, 0, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wpln"]
bg_color = Color(0, 0.498039, 0.262745, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_bxkjo")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_lf63n")
theme_override_font_sizes/font_size = 32
text = "Lifes: 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l2f1i")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE LOST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2wpln")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE WONE THE LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GO TO NEXT LEVEL"

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
